.kubernetes/ingress/nginx-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: service-board-be
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: service-board-fe
                port:
                  number: 80
